--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=8000
 
 // postgresql
 DATABASE_PORT=5432
-DATABASE_USER=postgres
-DATABASE_PASSWORD=TheDeamonYTB12.
-DATABASE_HOST=localhost
+DATABASE_USER=NULL
+DATABASE_PASSWORD=NULL
+DATABASE_HOST=NULL
 DATABASE=auth
